--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,71 @@
-# Production requirements for BizBot.Store API
-fastapi==0.104.1
+# Production requirements for Agent Marketplace Platform
+# Core Framework
+fastapi==0.115.0
 uvicorn[standard]==0.24.0
-stripe==7.8.0
 pydantic==2.5.0
 python-multipart==0.0.6
+
+# Database
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+
+# AI/ML Dependencies
+anthropic==0.8.1
+openai==1.6.1
+langchain==0.1.0
+langchain-anthropic==0.1.1
+langchain-openai==0.0.5
+langchain-core==0.1.12
+langgraph==0.0.20
+crewai==0.55.1
+
+# Vector Database
+qdrant-client==1.7.0
+
+# Cache & Queue
+redis==5.0.1
+celery==5.3.4
+
+# Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Monitoring & Logging
+prometheus-client==0.19.0
+structlog==23.2.0
+
+# HTTP & Validation
+httpx==0.26.0
+validators==0.22.0
+beautifulsoup4==4.12.2
+
+# Utilities
+python-dotenv==1.0.0
+tiktoken==0.5.2
+asyncio==3.4.3
+
+# Payment Processing
+stripe==7.8.0
+
+# Additional dependencies for Phase 2
+redis==5.0.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# Testing dependencies for Phase 3
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+pytest-json-report==1.5.0
+pytest-mock==3.12.0
+
+# Monitoring and observability
+prometheus-client==0.19.0
+psutil==5.9.6
+python-json-logger==2.0.7
+
+# Production configuration
+pydantic[email]==2.5.0
